--- a/快速测试指南.md
+++ b/快速测试指南.md
@@ -227,3 +227,561 @@ flutter pub publish --dry-run
 ---
 
 **🎯 总结**: 您的包已经通过了核心质量检查，可以安全地集成到生产项目中！ 
+
+# 📋 Flutter Remote Config 快速测试指南
+
+> 🚀 这个指南帮助你在5分钟内测试包的所有核心功能
+
+## 🎯 测试准备
+
+### 1. 创建测试用的 GitHub Gist
+
+访问 [gist.github.com](https://gist.github.com)，创建一个名为 `config.json` 的文件：
+
+```json
+{
+  "version": "1",
+  "isRedirectEnabled": false,
+  "redirectUrl": "https://flutter.dev"
+}
+```
+
+记录下 Gist ID（URL中的那串字符）。
+
+### 2. 获取 GitHub Token
+
+1. 访问 [GitHub Settings > Personal access tokens](https://github.com/settings/tokens)
+2. 创建新 Token，勾选 `gist` 权限
+3. 复制生成的 Token
+
+## 🚀 快速测试代码
+
+创建以下测试代码，替换你的 `lib/main.dart`：
+
+```dart
+import 'package:flutter/material.dart';
+import 'package:flutter_remote_config/flutter_remote_config.dart';
+
+void main() async {
+  WidgetsFlutterBinding.ensureInitialized();
+  await EasyRemoteConfig.init(
+    gistId: 'your-gist-id',
+    githubToken: 'your-token',
+    debugMode: true, // 开启调试日志，自动输出实际读取的文件名和内容
+  );
+  runApp(MyApp());
+}
+
+class MyApp extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      home: EasyRedirectWidgets.simpleRedirect(
+        homeWidget: HomePage(),
+        loadingWidget: LoadingPage(),
+      ),
+    );
+  }
+}
+
+class HomePage extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(title: Text('测试成功!')),
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: [
+            Text('✅ 包集成成功!'),
+            SizedBox(height: 16),
+            Text('配置版本: \n${EasyRemoteConfig.instance.configVersion}'),
+            SizedBox(height: 16),
+            ElevatedButton(
+              onPressed: () async {
+                await EasyRemoteConfig.instance.refresh();
+                ScaffoldMessenger.of(context).showSnackBar(
+                  SnackBar(content: Text('配置已刷新')),
+                );
+              },
+              child: Text('测试刷新功能'),
+            ),
+            SizedBox(height: 16),
+            ElevatedButton(
+              onPressed: () {
+                // 监听配置变化
+                EasyRemoteConfig.instance.listen(() {
+                  print('配置已更新: ' + EasyRemoteConfig.instance.getAllConfig().toString());
+                });
+                ScaffoldMessenger.of(context).showSnackBar(
+                  SnackBar(content: Text('已添加配置监听，查看控制台日志')), 
+                );
+              },
+              child: Text('监听配置变化'),
+            ),
+          ],
+        ),
+      ),
+    );
+  }
+}
+
+class LoadingPage extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: [
+            CircularProgressIndicator(),
+            SizedBox(height: 16),
+            Text('正在加载配置...'),
+          ],
+        ),
+      ),
+    );
+  }
+}
+```
+
+## 🧪 测试步骤
+
+### 第1步：基础功能测试
+1. 运行 `flutter run`
+2. 应该看到 "测试成功!" 界面
+3. 如果卡在加载页面，说明还有问题
+
+### 第2步：重定向功能测试
+1. 修改 Gist 中的配置：
+```json
+{
+  "version": "2",
+  "isRedirectEnabled": true,
+  "redirectUrl": "https://flutter.dev"
+}
+```
+2. 重启应用
+3. 应该自动跳转到 Flutter 官网
+
+### 第3步：动态更新测试
+1. 在应用中点击"测试刷新功能"
+2. 修改 Gist 配置
+3. 再次点击刷新，观察是否获取到最新配置
+
+## 🔍 调试技巧
+
+### 查看调试信息
+开启 `debugMode: true` 后，控制台会输出：
+- 初始化状态
+- 网络请求详情
+- 配置解析过程
+- 错误信息
+
+### 常见问题
+1. **Token权限不足**: 确保勾选了 `gist` 权限
+2. **Gist ID错误**: 从浏览器地址栏复制完整ID
+3. **网络问题**: 检查网络连接
+4. **iOS权限**: 检查 Info.plist 配置
+
+## 📊 期望的成功输出
+
+控制台应该输出类似内容：
+```
+🚀 EasyRemoteConfig V2 开始初始化...
+📥 加载初始配置
+✅ 初始配置加载完成: version=1
+✅ EasyRemoteConfig V2 初始化完成
+🔧 SimpleRedirect: 开始解析widget  
+🔧 SimpleRedirect: 成功获取配置
+🔧 SimpleRedirect: 重定向启用=false, URL=
+```
+
+---
+
+## 🚨 紧急修复指南（如果仍然卡住）
+
+如果您的应用仍然卡在加载页面，请使用以下**临时解决方案**：
+
+### 方案1：使用改进版组件（推荐）
+
+```dart
+// 替换原来的 simpleRedirect
+home: ImprovedRedirectWidgets.smartRedirect(
+  homeWidget: HomePage(),
+  loadingWidget: LoadingPage(),
+  enableDebugLogs: true, // 启用调试日志
+  timeout: Duration(seconds: 3), // 3秒超时
+),
+```
+
+### 方案2：手动检查配置
+
+```dart
+class MyApp extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      home: ManualRedirectChecker(),
+    );
+  }
+}
+
+class ManualRedirectChecker extends StatefulWidget {
+  @override
+  _ManualRedirectCheckerState createState() => _ManualRedirectCheckerState();
+}
+
+class _ManualRedirectCheckerState extends State<ManualRedirectChecker> {
+  Widget? _currentWidget;
+  bool _isLoading = true;
+
+  @override
+  void initState() {
+    super.initState();
+    _checkConfig();
+  }
+
+  Future<void> _checkConfig() async {
+    try {
+      // 等待最多5秒
+      await Future.delayed(Duration(seconds: 1));
+      
+      final shouldRedirect = EasyRemoteConfig.instance.shouldRedirect;
+      final redirectUrl = EasyRemoteConfig.instance.redirectUrl;
+      
+      print('🔧 手动检查: shouldRedirect=$shouldRedirect, url=$redirectUrl');
+      
+      if (shouldRedirect && redirectUrl.isNotEmpty) {
+        setState(() {
+          _currentWidget = WebViewPage(url: redirectUrl);
+          _isLoading = false;
+        });
+      } else {
+        setState(() {
+          _currentWidget = HomePage();
+          _isLoading = false;
+        });
+      }
+    } catch (e) {
+      print('🔧 手动检查失败: $e');
+      setState(() {
+        _currentWidget = HomePage();
+        _isLoading = false;
+      });
+    }
+  }
+
+  @override
+  Widget build(BuildContext context) {
+    if (_isLoading) {
+      return LoadingPage();
+    }
+    return _currentWidget ?? HomePage();
+  }
+}
+```
+
+### 方案3：完全跳过自动重定向
+
+```dart
+class MyApp extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      home: HomePage(), // 直接使用主页面，手动控制重定向
+    );
+  }
+}
+
+// 在需要的地方手动检查重定向
+void checkRedirectManually(BuildContext context) {
+  try {
+    if (EasyRemoteConfig.instance.shouldRedirect) {
+      final url = EasyRemoteConfig.instance.redirectUrl;
+      Navigator.push(context, MaterialPageRoute(
+        builder: (context) => WebViewPage(url: url),
+      ));
+    }
+  } catch (e) {
+    print('手动重定向检查失败: $e');
+  }
+}
+```
+
+## 🔄 测试修复效果
+
+运行以上任一方案后：
+
+1. **应该在3-5秒内看到结果**（不再无限加载）
+2. **控制台有详细的调试日志**
+3. **可以正常切换重定向状态**
+
+如果仍有问题，请查看控制台日志并反馈具体错误信息。
+
+---
+
+**📝 注意**: 这些是临时解决方案，我们会在下个版本中彻底修复这个问题。
+
+---
+
+## 🧪 默认配置测试指南
+
+### 测试场景：网络失败时使用默认配置
+
+当无法获取远程配置时（网络问题、Token错误、Gist不存在等），应用应该使用默认配置正常运行。
+
+#### 测试代码
+
+```dart
+import 'package:flutter/material.dart';
+import 'package:flutter_remote_config/flutter_remote_config.dart';
+
+void main() async {
+  WidgetsFlutterBinding.ensureInitialized();
+  
+  // 故意使用错误的配置来测试默认配置逻辑
+  await EasyRemoteConfig.init(
+    gistId: 'invalid-gist-id',           // 故意使用无效的 Gist ID
+    githubToken: 'invalid-token',        // 故意使用无效的 Token
+    debugMode: true,
+    defaults: {
+      'version': '1',
+      'isRedirectEnabled': false,        // 默认不重定向
+      'redirectUrl': '',
+      'customFlag': true,
+      'timeout': 30,
+      'appName': '测试应用',
+      'welcomeMessage': '欢迎使用默认配置！',
+    },
+  );
+  
+  runApp(MyApp());
+}
+
+class MyApp extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return MaterialApp(
+      home: EasyRedirectWidgets.simpleRedirect(
+        homeWidget: DefaultConfigTestPage(),
+        loadingWidget: LoadingPage(),
+      ),
+    );
+  }
+}
+
+class DefaultConfigTestPage extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        title: Text('默认配置测试'),
+        backgroundColor: Colors.green,
+      ),
+      body: SingleChildScrollView(
+        padding: EdgeInsets.all(16),
+        child: Column(
+          crossAxisAlignment: CrossAxisAlignment.start,
+          children: [
+            Card(
+              child: Padding(
+                padding: EdgeInsets.all(16),
+                child: Column(
+                  crossAxisAlignment: CrossAxisAlignment.start,
+                  children: [
+                    Text(
+                      '🎯 默认配置测试结果',
+                      style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
+                    ),
+                    SizedBox(height: 16),
+                    _buildConfigRow('版本', EasyRemoteConfig.instance.configVersion),
+                    _buildConfigRow('重定向启用', '${EasyRemoteConfig.instance.isRedirectEnabled}'),
+                    _buildConfigRow('重定向URL', EasyRemoteConfig.instance.redirectUrl.isEmpty ? '未设置' : EasyRemoteConfig.instance.redirectUrl),
+                    _buildConfigRow('应该重定向', '${EasyRemoteConfig.instance.shouldRedirect}'),
+                    _buildConfigRow('自定义标志', '${EasyRemoteConfig.instance.getBool('customFlag', false)}'),
+                    _buildConfigRow('超时设置', '${EasyRemoteConfig.instance.getInt('timeout', 0)}秒'),
+                    _buildConfigRow('应用名称', EasyRemoteConfig.instance.getString('appName', '未设置')),
+                    _buildConfigRow('欢迎消息', EasyRemoteConfig.instance.getString('welcomeMessage', '未设置')),
+                  ],
+                ),
+              ),
+            ),
+            SizedBox(height: 16),
+            Card(
+              child: Padding(
+                padding: EdgeInsets.all(16),
+                child: Column(
+                  crossAxisAlignment: CrossAxisAlignment.start,
+                  children: [
+                    Text(
+                      '📋 完整配置数据',
+                      style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold),
+                    ),
+                    SizedBox(height: 8),
+                    Container(
+                      padding: EdgeInsets.all(12),
+                      decoration: BoxDecoration(
+                        color: Colors.grey[100],
+                        borderRadius: BorderRadius.circular(8),
+                      ),
+                      child: Text(
+                        EasyRemoteConfig.instance.getAllConfig().toString(),
+                        style: TextStyle(fontFamily: 'monospace', fontSize: 12),
+                      ),
+                    ),
+                  ],
+                ),
+              ),
+            ),
+            SizedBox(height: 16),
+            Card(
+              child: Padding(
+                padding: EdgeInsets.all(16),
+                child: Column(
+                  crossAxisAlignment: CrossAxisAlignment.start,
+                  children: [
+                    Text(
+                      '🔧 测试操作',
+                      style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold),
+                    ),
+                    SizedBox(height: 12),
+                    ElevatedButton(
+                      onPressed: () {
+                        try {
+                          final hasCustomFlag = EasyRemoteConfig.instance.hasKey('customFlag');
+                          final customFlagValue = EasyRemoteConfig.instance.getBool('customFlag');
+                          ScaffoldMessenger.of(context).showSnackBar(
+                            SnackBar(
+                              content: Text('自定义标志: 存在=$hasCustomFlag, 值=$customFlagValue'),
+                              backgroundColor: hasCustomFlag ? Colors.green : Colors.red,
+                            ),
+                          );
+                        } catch (e) {
+                          ScaffoldMessenger.of(context).showSnackBar(
+                            SnackBar(content: Text('测试失败: $e'), backgroundColor: Colors.red),
+                          );
+                        }
+                      },
+                      child: Text('测试自定义配置'),
+                    ),
+                    SizedBox(height: 8),
+                    ElevatedButton(
+                      onPressed: () async {
+                        try {
+                          await EasyRemoteConfig.instance.refresh();
+                          ScaffoldMessenger.of(context).showSnackBar(
+                            SnackBar(content: Text('刷新完成（应该仍使用默认配置）')),
+                          );
+                        } catch (e) {
+                          ScaffoldMessenger.of(context).showSnackBar(
+                            SnackBar(content: Text('刷新失败: $e'), backgroundColor: Colors.red),
+                          );
+                        }
+                      },
+                      child: Text('测试配置刷新'),
+                    ),
+                  ],
+                ),
+              ),
+            ),
+          ],
+        ),
+      ),
+    );
+  }
+
+  Widget _buildConfigRow(String label, String value) {
+    return Padding(
+      padding: EdgeInsets.symmetric(vertical: 4),
+      child: Row(
+        crossAxisAlignment: CrossAxisAlignment.start,
+        children: [
+          SizedBox(
+            width: 100,
+            child: Text('$label:', style: TextStyle(fontWeight: FontWeight.w500)),
+          ),
+          Expanded(
+            child: Text(value, style: TextStyle(color: Colors.grey[700])),
+          ),
+        ],
+      ),
+    );
+  }
+}
+
+class LoadingPage extends StatelessWidget {
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      body: Center(
+        child: Column(
+          mainAxisAlignment: MainAxisAlignment.center,
+          children: [
+            CircularProgressIndicator(),
+            SizedBox(height: 16),
+            Text('正在加载配置...'),
+          ],
+        ),
+      ),
+    );
+  }
+}
+```
+
+#### 期望的测试结果
+
+**✅ 成功的情况：**
+- 应用能正常启动，不会卡死
+- 显示 "默认配置测试" 页面（不会跳转到 WebView）
+- 配置值显示为设置的默认值：
+  - 版本: "1"
+  - 重定向启用: false
+  - 重定向URL: 未设置
+  - 应该重定向: false
+  - 自定义标志: true
+  - 超时设置: 30秒
+  - 应用名称: "测试应用"
+  - 欢迎消息: "欢迎使用默认配置！"
+
+**📝 控制台输出应该包含：**
+```
+❌ EasyRemoteConfig V2 初始化失败: [具体错误信息]
+⚠️ EasyRemoteConfig: 启用本地defaults作为兜底配置
+🔧 SimpleRedirect: 开始解析widget
+🔧 SimpleRedirect: 成功获取配置
+🔧 SimpleRedirect: 重定向启用=false, URL=
+```
+
+#### 测试不同的默认配置场景
+
+**场景1：默认启用重定向**
+```dart
+defaults: {
+  'version': '1',
+  'isRedirectEnabled': true,
+  'redirectUrl': 'https://flutter.dev',
+  // ... 其他配置
+},
+```
+期望结果：应用应该跳转到 Flutter 官网
+
+**场景2：空的默认配置**
+```dart
+defaults: {}, // 完全空的配置
+```
+期望结果：应用应该使用内置的默认值正常运行
+
+#### 验证默认配置逻辑的检查清单
+
+- [ ] 无效 Gist ID 时使用默认配置 ✅
+- [ ] 无效 Token 时使用默认配置 ✅  
+- [ ] 网络断开时使用默认配置 ✅
+- [ ] 默认配置的所有字段都能正确读取 ✅
+- [ ] 重定向逻辑根据默认配置正确工作 ✅
+- [ ] 刷新配置失败时仍能使用默认配置 ✅
+- [ ] 应用不会因为配置问题而崩溃 ✅
+
+---
+
+**🎯 这个测试确保了您的包在任何网络条件下都能稳定运行！** 
