--- a/快速测试指南.md
+++ b/快速测试指南.md
@@ -531,6 +531,35 @@ void checkRedirectManually(BuildContext context) {
 
 当无法获取远程配置时（网络问题、Token错误、Gist不存在等），应用应该使用默认配置正常运行。
 
+> **💡 注意**: 下面的测试代码包含了额外的配置项（如 `customFlag`、`timeout` 等）仅为演示目的。  
+> **在实际项目中，您只需要包含您实际需要的配置项即可。**
+
+#### 简化版测试代码（推荐）
+
+如果您只需要基本的重定向功能，使用这个简化版本：
+
+```dart
+void main() async {
+  WidgetsFlutterBinding.ensureInitialized();
+  
+  // 只包含您实际需要的配置项
+  await EasyRemoteConfig.init(
+    gistId: 'invalid-gist-id',           // 故意使用无效的 Gist ID
+    githubToken: 'invalid-token',        // 故意使用无效的 Token
+    debugMode: true,
+    defaults: {
+      'version': '1',
+      'isRedirectEnabled': false,        // 默认不重定向
+      'redirectUrl': '',
+    },
+  );
+  
+  runApp(MyApp());
+}
+```
+
+#### 完整功能测试代码（演示多种数据类型）
+
 #### 测试代码
 
 ```dart
